--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.3.2-dev"
+            "dev-master": "zizoo-dev"
         }
     },
     "config": {
